--- a/css/spinner.css
+++ b/css/spinner.css
@@ -1,90 +1,84 @@
-@-moz-keyframes timer-loader {
-  0% {
-    -moz-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -moz-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-@-webkit-keyframes timer-loader {
-  0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-@keyframes timer-loader {
-  0% {
-    -moz-transform: rotate(0deg);
-    -ms-transform: rotate(0deg);
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  100% {
-    -moz-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-/* :not(:required) hides this rule from IE9 and below */
-.timer-loader:not(:required) {
-  border: 6px solid #5cb85c;
-  -moz-border-radius: 24px;
-  -webkit-border-radius: 24px;
-  border-radius: 24px;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  display: inline-block;
-  overflow: hidden;
+.spinner {
   position: relative;
-  text-indent: -9999px;
-  width: 48px;
-  height: 48px;
+  margin: 0% auto;
+  width: 50px;
+  height: 30px;
+  text-align: center;
+  /*font-size: 10px;*/
 }
-.timer-loader:not(:required)::before {
-  -moz-animation: timer-loader 1250ms infinite linear;
-  -webkit-animation: timer-loader 1250ms infinite linear;
-  animation: timer-loader 1250ms infinite linear;
-  -moz-transform-origin: 3px 3px;
-  -ms-transform-origin: 3px 3px;
-  -webkit-transform-origin: 3px 3px;
-  transform-origin: 3px 3px;
-  background: #5cb85c;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-  content: '';
-  display: block;
-  position: absolute;
+
+.spinner > div {
+  margin-left: 2px;
+  background-color: #333;
+  height: 100%;
   width: 6px;
-  height: 19.2px;
-  left: 15px;
-  top: 15px;
+  display: inline-block;
+
+  -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
+  animation: stretchdelay 1.2s infinite ease-in-out;
 }
-.timer-loader:not(:required)::after {
-  -moz-animation: timer-loader 15000ms infinite linear;
-  -webkit-animation: timer-loader 15000ms infinite linear;
-  animation: timer-loader 15000ms infinite linear;
-  -moz-transform-origin: 3px 3px;
-  -ms-transform-origin: 3px 3px;
-  -webkit-transform-origin: 3px 3px;
-  transform-origin: 3px 3px;
-  background: #5cb85c;
-  -moz-border-radius: 3px;
-  -webkit-border-radius: 3px;
-  border-radius: 3px;
-  content: '';
-  display: block;
+
+.spinner .rect2 {
+  -webkit-animation-delay: -1.1s;
+  animation-delay: -1.1s;
+}
+
+.spinner .rect3 {
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
+}
+
+.spinner .rect4 {
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s;
+}
+
+.spinner .rect5 {
+  -webkit-animation-delay: -0.8s;
+  animation-delay: -0.8s;
+}
+
+@-webkit-keyframes stretchdelay {
+  0%, 40%, 100% { -webkit-transform: scaleY(0.4) }
+  20% { -webkit-transform: scaleY(1.0) }
+}
+
+@keyframes stretchdelay {
+  0%, 40%, 100% {
+    transform: scaleY(0.4);
+    -webkit-transform: scaleY(0.4);
+  }  20% {
+       transform: scaleY(1.0);
+       -webkit-transform: scaleY(1.0);
+     }
+}
+
+.spinner-iframe {
   position: absolute;
-  width: 6px;
-  height: 16px;
-  left: 15px;
-  top: 15px;
+  width: 30px;
+  height: 30px;
+  left: 46%;
+  background-color: #333;
+  margin: 60px auto;
+  -webkit-animation: rotateplane 1.2s infinite ease-in-out;
+  animation: rotateplane 1.2s infinite ease-in-out;
+}
+
+@-webkit-keyframes rotateplane {
+  0% { -webkit-transform: perspective(120px) }
+  50% { -webkit-transform: perspective(120px) rotateY(180deg) }
+  100% { -webkit-transform: perspective(120px) rotateY(180deg)  rotateX(180deg) }
+}
+
+@keyframes rotateplane {
+  0% {
+    transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+    -webkit-transform: perspective(120px) rotateX(0deg) rotateY(0deg)
+  } 50% {
+      transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+      -webkit-transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg)
+    } 100% {
+        transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+        -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+      }
 }
