--- a/css/main.css
+++ b/css/main.css
@@ -53,11 +53,11 @@
     display: inline;
 }
 .inner-wrapper {
-    padding:20px;
+    padding:20px 20px 0px 20px;
     position: absolute;
     top:50%;
     width: 500px;
-    height: 220px;
+    
     left: 50%;	
     margin-left: -250px;	
     margin-top: -110px;	
