--- a/css/main.css
+++ b/css/main.css
@@ -224,6 +224,7 @@
 }
 .detail-view{
     border-bottom: 5px solid #ef9c00;
+	border-top: 5px solid #ef9c00;
 }
 .detail-view:hover{
     background-color: #fff!important;
